[project]
name = "simple-map-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.7",
    "mercantile>=1.2.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
    "tqdm>=4.67.1",
]
